examples/bad/type2.swifty
//variables are strongly typed

var x = 1 //x type is int
x = false // error
